tests/Error/ErrorCollector/ErrorCollectorSource/ConstantWithoutPublicDeclaration.php.inc
<?php

namespace Symplify\EasyCodingStandard\Tests\Error\ErrorDataCollectorSource;

abstract class ConstantWithoutPublicDeclaration
{
    const HEY = 'hi';

    const HOU = 'hello';
}